Fix signature error