@@ -463,7 +463,7 @@ public final class HapiWorkerContext extends I18nBase implements IWorkerContext 
 
 	@Override
 	public boolean isPrimitiveType(String theType) {
-		return List.of(
+		return Arrays.asList(
 						"boolean",
 						"integer",
 						"integer64",
